<resources>
    <string name="app_name">kotlin</string>
    <string name="take_photo">Take Photo</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_message">You must grant permission to access camera and external storage to run this application.</string>
    <string name="permission_warning">All permissions are required.</string>
    <string name="go_surface_view">Surface View</string>
    <string name="go_expandable_list_view">ExpandableList View</string>
    <string name="go_recycler_view">Recycler View</string>
    <string name="menu_linear_vertical">Linear Vertical</string>
    <string name="menu_linear_horizontal">Linear Horizontal</string>
    <string name="menu_gridview_vertical">GridView Vertical</string>
    <string name="menu_gridview_horizontal">GridView Horizontal</string>
    <string name="menu_staggered_gridview_vertical">Staggered Gridview Vertical</string>
    <string name="menu_staggered_gridview_horizontal">Staggered GridView Horizontal</string>

    <string name="showing_code_in_fragment">Showing code in fragment</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="name">Name</string>
    <string name="empty">---</string>
    <string name="site_name">Site name</string>
    <string name="scan_a_code">Scan a QR code</string>
    <string name="result_not_found">Result not found</string>
    <string name="show_scanner_from_fragment">Show Scanner From Fragment</string>
    <string name="qr_scan_view">ZXING QRScan View</string>
    <string name="txt_finish">finish</string>
    <string name="loading_hint">正在确认中</string>
    <string name="video_default_time">00:00 / 00:00</string>
    <string name="ijkplayer_view">IJKPlayer View</string>
    <string name="circle_pie_view">Circle Pie View</string>
    <string name="process_change_bt">change</string>
    <string name="picker_date">Picker Date</string>
    <string name="video_frame">Video Frame</string>
    <string name="ruler_view">Ruler View</string>
    <string name="image_crop">图片裁切</string>
    <string name="rect_process_view">Rect Process View</string><string name="glsl_replace">glsl_replace</string><string name="blend_replace">blend_replace</string>
</resources>
