<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/qr_padding_medium">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/qr_padding_medium"
        android:text="@string/show_scanner_from_fragment" />

    <Button
        android:id="@+id/scanBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/qr_padding_default"
        android:text="@string/name" />

    <TextView
        android:id="@+id/fragmentQrName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/qr_padding_default"
        android:text="@string/empty"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/qr_padding_default"
        android:text="@string/site_name" />

    <TextView
        android:id="@+id/fragmentQrSiteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/qr_padding_default"
        android:text="@string/empty"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/fragmentQrErrorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/qr_padding_default"
        android:text="@string/empty"
        android:textStyle="bold|italic"
        android:visibility="gone" />


</LinearLayout>