<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/goSurfaceViewBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/show_permission_padding"
        android:layout_marginTop="@dimen/show_permission_padding"
        android:layout_marginRight="@dimen/show_permission_padding"
        android:text="@string/go_surface_view" />


    <Button
        android:id="@+id/goExpendViewBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/show_permission_padding"
        android:layout_marginRight="@dimen/show_permission_padding"
        android:text="@string/go_expandable_list_view" />

    <Button
        android:id="@+id/goRecyclerViewBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/show_permission_padding"
        android:layout_marginRight="@dimen/show_permission_padding"
        android:text="@string/go_recycler_view" />

    <Button
        android:id="@+id/goQRScanBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/show_permission_padding"
        android:layout_marginRight="@dimen/show_permission_padding"
        android:text="@string/qr_scan_view" />

    <Button
        android:id="@+id/goIJKPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/show_permission_padding"
        android:layout_marginRight="@dimen/show_permission_padding"
        android:text="@string/ijkplayer_view" />

    <tank.com.kotlin.view.AlignRecyclerViewEditor
        android:layout_width="match_parent"
        android:layout_height="60dp" />

</LinearLayout>